maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:9: error: ';' expected but 'else' found.
    else(getDirection == Direction.NORTH && northOK())
    ^